# EngineeringThesis

./: .gitignore  CMakeLists.txt  DataAnalysis.ipynb  GraphGenerator.cpp  HowtoRun.txt  TODO  runOnAllfilesInDir.sh
Prace do Inz/Prawdopodobnie lepsze/: ZelikovskyRobins.pdf:Zone.Identifier
include/: GraphStructures.hpp  algorithmRunner.hpp  debugPrints.hpp  graph.hpp  helpers.hpp  node.hpp  random.hpp  utils.hpp
src/: GraphStructures.cpp  TakahashiAndMatsuyama.cpp  algorithmRunner.cpp  debugPrints.cpp  graph.cpp  helpers.cpp  main.cpp  node.cpp  random.cpp  utils.cpp
src/Algorithms/: DWcopy.cpp  DreyfusWagner.cpp  KouMarkowskyBerman.cpp  TakahashiMatsuyama.cpp
